fix: align paddle sizing and full-range control

--- a/src/client/components/Paddle/Paddle.module.css
+++ b/src/client/components/Paddle/Paddle.module.css
@@ -1,7 +1,5 @@
 .paddle {
   position: absolute;
-  width: var(--paddle-width);
-  height: var(--paddle-height);
   background-color: var(--primary-color);
   box-shadow: 0 0 10px var(--primary-color);
   transition: top 0.1s ease-out;
@@ -12,9 +10,7 @@
 }
 
 .left {
-  left: var(--paddle-margin);
 }
 
 .right {
-  right: var(--paddle-margin);
 }
